Big changes to make state hashing work
Signed-off-by: Jasper Potts <1466205+jasperpotts@users.noreply.github.com>